[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/item_list.tscn" type="PackedScene" id=1]
[ext_resource path="res://hangar/mod_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://hangar/edit_part.gd" type="Script" id=3]
[ext_resource path="res://hangar/equip_preview.tscn" type="PackedScene" id=4]

[node name="EditPart" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 512 )
script = ExtResource( 3 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="Header" type="Label" parent="Content"]
margin_right = 1266.0
margin_bottom = 14.0
text = "EDIT PART"

[node name="Body" type="HBoxContainer" parent="Content"]
margin_top = 18.0
margin_right = 1266.0
margin_bottom = 706.0
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 1

[node name="PartList" parent="Content/Body" instance=ExtResource( 1 )]
margin_right = 400.0
margin_bottom = 688.0

[node name="Info" type="VBoxContainer" parent="Content/Body"]
margin_left = 432.0
margin_right = 833.0
margin_bottom = 688.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Preview" type="PanelContainer" parent="Content/Body/Info"]
margin_right = 401.0
margin_bottom = 656.0
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="Content/Body/Info/Preview"]
margin_left = 7.0
margin_top = 7.0
margin_right = 394.0
margin_bottom = 649.0

[node name="Label" type="Label" parent="Content/Body/Info/Preview/Content"]
margin_right = 387.0
margin_bottom = 14.0
text = "Preview Area"

[node name="TextureRect" type="TextureRect" parent="Content/Body/Info/Preview/Content"]
margin_top = 18.0
margin_right = 387.0
margin_bottom = 642.0
size_flags_vertical = 3

[node name="EquipPreview" parent="Content/Body/Info/Preview/Content" instance=ExtResource( 4 )]
position = Vector2( 193, 509 )

[node name="Stats" type="PanelContainer" parent="Content/Body/Info"]
margin_top = 660.0
margin_right = 401.0
margin_bottom = 688.0

[node name="Label" type="Label" parent="Content/Body/Info/Stats"]
margin_left = 7.0
margin_top = 7.0
margin_right = 394.0
margin_bottom = 21.0
text = "Stat Block"

[node name="Tuning" type="VBoxContainer" parent="Content/Body"]
margin_left = 865.0
margin_right = 1266.0
margin_bottom = 688.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="Content/Body/Tuning"]
margin_right = 401.0
margin_bottom = 232.0

[node name="Header" type="Label" parent="Content/Body/Tuning/Content"]
margin_right = 401.0
margin_bottom = 14.0
text = "Item Name"

[node name="ModList" type="GridContainer" parent="Content/Body/Tuning/Content"]
margin_left = 72.0
margin_top = 18.0
margin_right = 328.0
margin_bottom = 214.0
size_flags_horizontal = 4
custom_constants/hseparation = 16
columns = 2

[node name="Mod1" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]

[node name="Mod2" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_left = 136.0
margin_right = 256.0

[node name="Mod3" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_top = 50.0
margin_bottom = 96.0

[node name="Mod4" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_left = 136.0
margin_top = 50.0
margin_right = 256.0
margin_bottom = 96.0

[node name="Mod5" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_top = 100.0
margin_bottom = 146.0

[node name="Mod6" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_left = 136.0
margin_top = 100.0
margin_right = 256.0
margin_bottom = 146.0

[node name="Mod7" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_top = 150.0
margin_bottom = 196.0

[node name="Mod8" parent="Content/Body/Tuning/Content/ModList" instance=ExtResource( 2 )]
margin_left = 136.0
margin_top = 150.0
margin_right = 256.0
margin_bottom = 196.0

[node name="Body" type="Label" parent="Content/Body/Tuning/Content"]
margin_top = 218.0
margin_right = 401.0
margin_bottom = 232.0
text = "Item Description"

[node name="BtnUnlockMod" type="Button" parent="Content/Body/Tuning/Content"]
visible = false
margin_top = 236.0
margin_right = 401.0
margin_bottom = 256.0
text = "Unlock Mod"

[node name="BtnToggleMod" type="Button" parent="Content/Body/Tuning/Content"]
visible = false
margin_top = 236.0
margin_right = 401.0
margin_bottom = 256.0
text = "Toggle Mod"

[node name="BtnConfirm" type="Button" parent="Content/Body/Tuning"]
margin_top = 236.0
margin_right = 401.0
margin_bottom = 256.0
text = "Confirm"

[node name="BtnCancel" type="Button" parent="Content/Body/Tuning"]
margin_top = 260.0
margin_right = 401.0
margin_bottom = 280.0
text = "Cancel"

[connection signal="item_selected" from="Content/Body/PartList" to="." method="_on_PartList_item_selected"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod1" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod2" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod3" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod4" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod5" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod6" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod7" to="." method="_on_mod_clicked"]
[connection signal="mod_clicked" from="Content/Body/Tuning/Content/ModList/Mod8" to="." method="_on_mod_clicked"]
[connection signal="pressed" from="Content/Body/Tuning/Content/BtnUnlockMod" to="." method="_on_BtnUnlockMod_pressed"]
[connection signal="pressed" from="Content/Body/Tuning/Content/BtnToggleMod" to="." method="_on_BtnToggleMod_pressed"]
[connection signal="pressed" from="Content/Body/Tuning/BtnConfirm" to="." method="_on_BtnConfirm_pressed"]
[connection signal="pressed" from="Content/Body/Tuning/BtnCancel" to="." method="_on_BtnCancel_pressed"]
